# typout

./: Cargo.toml  README.md
examples/: simulate.rs
src/: console.rs  lib.rs  output.rs  output_intent.rs  spinner.rs  spinner_intent.rs  spinner_state.rs  typout.rs  verbosity.rs
src/streamlets/: console.rs  memory.rs  mod.rs
