[package]
name = "typout"
description = "Command-line typewriter output stream."
license = "MIT"
version = "0.2.1"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/typout"
homepage = "https://github.com/xpepermint/typout"
repository = "https://github.com/xpepermint/typout"
readme = "README.md"

[dependencies]
crossterm = "^0.17.6"
